Made sure each card photo has a cropped fixed height in findPods

--- a/public/style/findPods.css
+++ b/public/style/findPods.css
@@ -23,8 +23,7 @@
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
-  padding: 16px;
+  justify-content: space-between;
   z-index: 2;
 }
 
@@ -86,13 +85,17 @@
 }
 
 .tinder--card img {
-  max-width: 100%;
+  height: 40vh;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
   pointer-events: none;
 }
 
+
 .tinder--card h3 {
   margin-top: 32px;
-  font-size: 32px;
+  font-size: 26px;
   padding: 0 16px;
   pointer-events: none;
   display: flex;
@@ -153,7 +156,6 @@
 }
 
 .tinder--buttons i {
-  font-size: 32px;
   vertical-align: middle;
   text-align: center;
   display: flex;
